--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.17.2",
-    "@mantine/hooks": "7.17.2",
+    "@mantine/carousel": "^7.17.2",
+    "@mantine/core": "^7.17.2",
+    "@mantine/form": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
     "@next/bundle-analyzer": "^15.1.5",
     "@tabler/icons-react": "^3.28.1",
+    "embla-carousel-react": "^8.5.2",
     "next": "15.1.5",
     "react": "19.0.0",
     "react-dom": "19.0.0"
